frontend/test/should_fail/computations_no_return_001.grg
pattern P(var input:int, def var output:int) modify(var inputput:int, def var outputput:int)
{
	modify {
		eval {
			return(inputput);
		}
	}
}
